--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "axios": "^1.6.2"
   }
 }
